--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<header> <!-- cabecera de pagina -->
 		<figure>
-			<img src="">
+			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
 		</figure>
 		<nav>
 			<ul>
@@ -26,7 +26,7 @@
 	<section> <!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
-			<img src="">
+			<img src="images/invie-acustica.png" alt="Guitarra Acustica">
 			<h3>Invie Acustica</h3>
 			<ol>
 				<li>Estilo Vitage</li>
@@ -36,7 +36,7 @@
 		</article>
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
-			<img src="">
+			<img src="images/invie-classic.png" alt="Guitarra Clasica">
 			<h3>Invie Classic</h3>
 			<ol>
 				<li>Estilo Vitage</li>
