Agregando navegacion interna

--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
 	<title>Guitarras Invisibles</title>
 </head>
 <body>
-	<header> <!-- cabecera de pagina -->
+	<header id="header"> <!-- cabecera de pagina -->
 		<figure>
 			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
 		</figure>
 		<nav>
 			<ul>
-				<li><a href="">Home</a></li>
-				<li><a href="">Precios</a></li>
+				<li><a href="#header">Home</a></li>
+				<li><a href="#guitarras">Guitarras</a></li>
+				<li><a href="precios.html">Precios</a></li>
 			</ul>
 		</nav>
 	</header>
-	<section> <!-- portadas -->
+	<section id="portada"> <!-- portadas -->
 		<h1>Guitarras invisibles</h1> <!-- titulo de la pagina -->
 		<h3>Sé la estrella de rock que siempre quisistes ser</h3> 
 		<button type="button">Ver más</button>
 		<!-- resumen	 -->
 		<!-- boton -->
 	</section>
-	<section> <!-- guitarras -->
+	<section id="guitarras"> <!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
-			<img src="images/invie-acustica.png" alt="Guitarra Acustica">
+			<img src="images/invie-acustica.png" width="200" alt="Guitarra Acustica">
 			<h3>Invie Acustica</h3>
 			<ol>
 				<li>Estilo Vitage</li>
@@ -36,7 +37,7 @@
 		</article>
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
-			<img src="images/invie-classic.png" alt="Guitarra Clasica">
+			<img src="images/invie-classic.png" width="200" alt="Guitarra Clasica">
 			<h3>Invie Classic</h3>
 			<ol>
 				<li>Estilo Vitage</li>
