agregando clases a nuestros elementos html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-	<header id="header"> <!-- cabecera de pagina -->
+	<header id="header" class="header"> <!-- cabecera de pagina -->
 		<figure>
 			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
 		</figure>
@@ -18,16 +18,16 @@
 			</ul>
 		</nav>
 	</header>
-	<section id="portada"> <!-- portadas -->
+	<section id="portada" class="portdas"> <!-- portadas -->
 		<h1>Guitarras invisibles</h1> <!-- titulo de la pagina -->
 		<h3>Sé la estrella de rock que siempre quisistes ser</h3> 
 		<button type="button">Ver más</button>
 		<!-- resumen	 -->
 		<!-- boton -->
 	</section>
-	<section id="guitarras"> <!-- guitarras -->
+	<section id="guitarras" > <!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
-		<article>
+		<article class="guitarras">
 			<img src="images/invie-acustica.png" width="200" alt="Guitarra Acustica">
 			<h3>Invie Acustica</h3>
 			<ol>
@@ -37,7 +37,7 @@
 			</ol>
 		</article>
 		<h2>Nuestras guitarras</h2><!-- titulo -->
-		<article>
+		<article class="guitarras">
 			<img src="images/invie-classic.png" width="200" alt="Guitarra Clasica">
 			<h3>Invie Classic</h3>
 			<ol>
