backgrounds, colores y tamaños de fuentes

--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
 			</ul>
 		</nav>
 	</header>
-	<section id="portada" class="portdas"> <!-- portadas -->
-		<h1>Guitarras invisibles</h1> <!-- titulo de la pagina -->
-		<h3>Sé la estrella de rock que siempre quisistes ser</h3> 
+	<section id="portada" class="portada"> <!-- portadas -->
+		<h1 class="titulo">Guitarras invisibles</h1> <!-- titulo de la pagina -->
+		<h3 class="titulo-a">Sé la estrella de rock que siempre quisistes ser</h3> 
 		<button type="button">Ver más</button>
 		<!-- resumen	 -->
 		<!-- boton -->
 	</section>
-	<section id="guitarras" > <!-- guitarras -->
+	<section id="guitarras" class="guitarras" > <!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
-		<article class="guitarras">
+		<article class="guitarras" >
 			<img src="images/invie-acustica.png" width="200" alt="Guitarra Acustica">
-			<h3>Invie Acustica</h3>
+			<h3 class="titulo-b">Invie Acustica</h3>
 			<ol>
 				<li>Estilo Vitage</li>
 				<li>Madera Pura</li>
 				<li>Estuche invisible de aluminio</li>
 			</ol>
 		</article>
-		<h2>Nuestras guitarras</h2><!-- titulo -->
+		<h3>Nuestras guitarras</h3><!-- titulo -->
 		<article class="guitarras">
 			<img src="images/invie-classic.png" width="200" alt="Guitarra Clasica">
-			<h3>Invie Classic</h3>
+			<h3 class="titulo-b">Invie Classic</h3>
 			<ol>
 				<li>Estilo Vitage</li>
 				<li>Liviana</li>
