--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Guitarras Invisibles</title>
+	<link href="https://fonts.googleapis.com/css?family=El+Messiri:400,700|Roboto:400,700" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
