Display block e inline-block

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 	<header id="header" class="header"> <!-- cabecera de pagina -->
-		<figure>
+		<figure class="menu">
 			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
 		</figure>
-		<nav>
+		<nav class="menu">
 			<ul>
 				<li><a href="#header">Home</a></li>
 				<li><a href="#guitarras">Guitarras</a></li>
