--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header id="header" class="header contenedor"> <!-- cabecera de pagina -->
-		<figure class="menu">
+		<figure class="logotipo">
 			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
 		</figure>
 		<nav class="menu">
@@ -27,11 +27,11 @@
 		
 	    </div>
 	</section>
-	<section id="guitarras" class="guitarras contenedor" > <!-- guitarras -->
-		<h2 class="titulo-a">Nuestras guitarras</h2><!-- titulo -->
+	<section id="guitarras" class="contenedor" > <!-- guitarras -->
+		<h2 class="titulo-aa">Nuestras guitarras</h2><!-- titulo -->
 		<article class="guitarras" >
 			
-			<img class="derecha" src="images/invie-acustica.png"  height="400"   alt="Guitarra Acustica">
+			<img class="derecha" src="images/invie-acustica.png"  height="380"   alt="Guitarra Acustica">
 			<div class="contenedor-guitarra-a">
 				<h3 class="titulo-b">Invie Acustica</h3>
 				<ol>
@@ -42,9 +42,9 @@
 			</div>
 		</article>
 			<article class="guitarras">
-			<img class="izquierda" src="images/invie-classic.png"  height="400" alt="Guitarra Clasica">
+			<img class="izquierda" src="images/invie-classic.png"  height="380" alt="Guitarra Clasica">
 			<div class="contenedor-guitarra-b">
-					<h3 class="titulo-b">Invie Classic</h3>
+					<h3 class="titulo-b">Invie Acustica</h3>
 					<ol>
 						<li>Estilo Vitage</li>
 						<li>Liviana</li>
