agregando footer a nuestro sitio

--- a/index.html
+++ b/index.html
@@ -55,5 +55,17 @@
 		<!-- resumen -->
 		<!-- boton -->
 	</section>
+	<footer class="footer">
+		<div class="contenedor">
+			<div class="contacto" >
+				<img src="images/invie-white.png">
+				<a href="tel:+58123456789"><strong>telefono</strong><span>+58123456789</span></a>
+				<a href="mailto:jamatheus@gmail.com"><strong>e-mail</strong>jamatheus@gmail.com</a>
+			</div>
+			<div class="">
+				formulario
+			</div>
+		</div>	
+	</footer>
 </body>
 </html>
