Footer, formulrios y ajustes en el diseño

--- a/precios.html
+++ b/precios.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Guitarras Invisibles</title>
-	 <link href="https://fonts.googleapis.com/css?family=El+Messiri:400,700|Roboto:400,700" rel="stylesheet">  
+	<link href="https://fonts.googleapis.com/css?family=El+Messiri:400,700|Roboto:400,700" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
@@ -15,51 +15,56 @@
 		</figure>
 		<nav class="menu">
 			<ul>
-				<li><a href="#header">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#guitarras">Guitarras</a></li>
 				<li><a href="precios.html">Precios</a></li>
 			</ul>
 		</nav>
 	</header><!-- portadas -->
 	   <div class="">
-		<h1 class="titulo">Guitarras  <span>Invi</span>sibles</h1> <!-- titulo de la pagina -->
+		<h1 class="titulo">Guitarras invisibles</h1> <!-- titulo de la pagina -->
 		<h3 class="titulo-a">Sé la estrella de rock que siempre quisistes ser</h3> <!-- resumen	 -->
 		<button type="button">Ver más</button> <!-- boton -->
 		
 	    </div>
 	</section>
-	<section id="guitarras" class="contenedor" > <!-- guitarras -->
-		<h2 class="titulo-aa">Nuestras guitarras</h2><!-- titulo -->
-		<article class="guitarras" >
-			
-			<img class="derecha" src="images/invie-acustica.png"  height="440"   alt="Guitarra Acustica">
-			<div class="contenedor-guitarra-a">
-				<h3 class="titulo-b">Invie Acustica</h3>
-				<ol>
-					<li>Estilo Vitage</li>
-					<li>Madera Pura</li>
-					<li>Estuche invisible de aluminio</li>
-				</ol>
-			</div>
-		</article>
-		<article class="guitarras">
-			<img class="izquierda" src="images/invie-classic.png"  height="380" alt="Guitarra Clasica">
-				<div class="contenedor-guitarra-b">
-					<h3 class="titulo-b">Invie Acustica</h3>
-					<ol>
-						<li>Estilo Vitage</li>
-						<li>Liviana</li>
-						<li>Inicia tu camino con estrella de rock</li>
-					</ol>
-				</div>
-		</article>
-		<!-- resumen -->
-		<!-- boton -->
+	<section class="table">
+		<div class="header-table">
+			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
+		</div>
+	   <div class="contenedor-tabla">
+		<table>
+			<thead>
+				<tr>
+					<th>Modelo</th>
+					<th>Precio</th>
+					<th>Descripcion</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Guitarra Clasica</td>
+					<td> $xxxxxxxx</td>
+					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quis, est labore incidunt. Temporibus nisi ex eos perspiciatis ipsa commodi.</td>
+				</tr>
+				<tr>
+					<td>Guitarra Acustica</td>
+					<td> $xxxxxxxx</td>
+					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quis, est labore incidunt. Temporibus nisi ex eos perspiciatis ipsa commodi.</td>
+				</tr>
+				<tr>
+					<td>Guitarra Invie</td>
+					<td> $xxxxxxxx</td>
+					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quis, est labore incidunt. Temporibus nisi ex eos perspiciatis ipsa commodi.</td>
+				</tr>
+			</tbody>
+		</table>
+	   </div>
 	</section>
 	<footer class="footer">
 		<div class="contenedor">
 			<div class="contacto" >
-				<img src="images/invie-white.png" width="250" height="100">
+				<img src="images/invie-white.png" width="300" height="100">
 				<a href="tel:+58123456789"><strong>Telefono</strong><span>+58123456789</span></a>
 				<a href="mailto:jamatheus@gmail.com"><strong>E-mail</strong>jamatheus@gmail.com</a>
 			</div>
