Modificado estilos, y pagina de precios

--- a/precios.html
+++ b/precios.html
@@ -3,68 +3,62 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Guitarras Invisibles</title>
-	<link href="https://fonts.googleapis.com/css?family=El+Messiri:400,700|Roboto:400,700" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=El+Messiri:400,700|Roboto:400,700" rel="stylesheet">  
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	
 	<section id="portada" class="portada"> 
-		<header id="header" class="header contenedor"> <!-- cabecera de pagina -->
+	<header id="header" class="header contenedor"> <!-- cabecera de pagina -->
 		<figure class="logotipo">
 			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
 		</figure>
 		<nav class="menu">
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="#header">Home</a></li>
 				<li><a href="#guitarras">Guitarras</a></li>
 				<li><a href="precios.html">Precios</a></li>
 			</ul>
 		</nav>
 	</header><!-- portadas -->
 	   <div class="">
-		<h1 class="titulo">Guitarras invisibles</h1> <!-- titulo de la pagina -->
+		<h1 class="titulo">Guitarras  <span>Invi</span>sibles</h1> <!-- titulo de la pagina -->
 		<h3 class="titulo-a">Sé la estrella de rock que siempre quisistes ser</h3> <!-- resumen	 -->
 		<button type="button">Ver más</button> <!-- boton -->
 		
 	    </div>
 	</section>
-	<section class="table">
-		<div class="header-table">
-			<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
-		</div>
-	   <div class="contenedor-tabla">
+	<div class="header-table">
+		<img src="images/invie.png" width="186" height="60" alt="invie logotipo">
+	</div>
+	<div class="table">
 		<table>
-			<thead>
-				<tr>
-					<th>Modelo</th>
-					<th>Precio</th>
-					<th>Descripcion</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Guitarra Clasica</td>
-					<td> $xxxxxxxx</td>
-					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quis, est labore incidunt. Temporibus nisi ex eos perspiciatis ipsa commodi.</td>
-				</tr>
-				<tr>
-					<td>Guitarra Acustica</td>
-					<td> $xxxxxxxx</td>
-					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quis, est labore incidunt. Temporibus nisi ex eos perspiciatis ipsa commodi.</td>
-				</tr>
-				<tr>
-					<td>Guitarra Invie</td>
-					<td> $xxxxxxxx</td>
-					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quis, est labore incidunt. Temporibus nisi ex eos perspiciatis ipsa commodi.</td>
-				</tr>
-			</tbody>
+			<tr>
+				<th>Modelo</th>
+				<th>Precio</th>
+				<th>Descripcion</th>
+			</tr>
+			<tr>
+				<td>Guitarra Clasica</td>
+				<td>$ xxxxx</td>
+				<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi unde repellendus illum, deserunt dolorem fuga veritatis harum, fugiat beatae ea.</td>
+			</tr>
+			<tr>
+				<td>Guitarra Acustica</td>
+				<td>$ xxxxx</td>
+				<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi unde repellendus illum, deserunt dolorem fuga veritatis harum, fugiat beatae ea.</td>
+			</tr>
+			<tr>
+				<td>Guitarra Moderna</td>
+				<td>$ xxxxx</td>
+				<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi unde repellendus illum, deserunt dolorem fuga veritatis harum, fugiat beatae ea.</td>
+			</tr>
 		</table>
-	   </div>
-	</section>
+	</div>
 	<footer class="footer">
 		<div class="contenedor">
 			<div class="contacto" >
-				<img src="images/invie-white.png" width="300" height="100">
+				<img src="images/invie-white.png" width="250" height="100">
 				<a href="tel:+58123456789"><strong>Telefono</strong><span>+58123456789</span></a>
 				<a href="mailto:jamatheus@gmail.com"><strong>E-mail</strong>jamatheus@gmail.com</a>
 			</div>
